Add a DBPlugin class for StackableDBs
This class allows a plugin to be registered with the DBOptions that change how the DB is initialized. The DBPlugin allows a "StackableDB" or related class to be registered with the DBOptions and invoked during database setup, construction, repair, or destruction. The plugin can alter and validate the options are appropriate for this type of database and can create a new stackable database.

Plugins can be serialized and reconstructed from the options file via the ObjectRegistry architecture.

The TTL database has been changed to use the plugin architecture. The TTL-specific open methods are now wrappers around creating and managing a TTL plugin.

Tests have been added to validate that the plugin can be serialized and recreated to/from options and that they are invoked properly.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -550,6 +550,7 @@ set(SOURCES
         db/db_impl/db_impl_secondary.cc
         db/db_info_dumper.cc
         db/db_iter.cc
+        db/db_plugin.cc
         db/dbformat.cc
         db/error_handler.cc
         db/event_helpers.cc
@@ -994,6 +995,7 @@ if(WITH_TESTS)
         db/db_merge_operator_test.cc
         db/db_merge_operand_test.cc
         db/db_options_test.cc
+        db/db_plugin_test.cc
         db/db_properties_test.cc
         db/db_range_del_test.cc
         db/db_impl/db_secondary_test.cc
