--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,16 @@ addons:
       - uuid-dev
       - libpulse-dev
 
+env:
+  global:
+    # include $HOME/.local/bin for `aws`
+    - PATH=$HOME/.local/bin:$PATH
+
+before_install:
+  - pyenv global 3.7.1
+  - pip install -U pip
+  - pip install awscli
+
 services:
   - docker
 
